# AiCup

./: .gitignore  A.cs  Asserts.cs  AssertsAndConstants.cs  CircleGenerator.cs  Constants.cs  IfAtack.cs  IfBonus.cs  MyStrategy.cs  Point.cs  PriorityQueue.cs  RemoteProcessClient.cs  Runner.cs  ScoutingStrategy.cs  ShortestPath.cs  ShotBrute.cs  ShottingBruteforce.cs  Utills.cs  Utils.cs  Variables.cs  a.sh  compile-csharp.sh  csharp-cgdk.csproj  finalstat.js  helpStrategy.cs  ifFieldRation.cs  ifHelpTeammate.cs  ifNothing.cs  ifRunAway.cs  ifThrowGrenade.cs  teamGrouping.cs
Agario/: .gitignore
CodeBall/: .gitignore  Action.h  Ball.h  CMakeLists.txt  Const.h  GameInfo.cpp  GameInfo.h  Helper.h  Logger.h  MyStrategy.cpp  MyStrategy.h  NitroPack.h  Point.h  RandomGenerators.h  RemoteProcessClient.cpp  RenderFigures.h  Robot.h  Runner.cpp  Sandbox.cpp  Sandbox.h  Strat.h  Unit.h  Visualizer.cpp  Visualizer.h  nlohmann.h  submit.sh  test.sh
CodeHockey/: AHo.cs  AHock.cs  APuck.cs  AUnit.cs  Attack.cs  Defend.cs  FindPath.cs  Global.cs  IStrategy.cs  MyStrategy.cs  Pair.cs  Point.cs  PriorityQueue.cs  PuckMoving.cs  RemoteProcessClient.cs  Research.cs  Runner.cs  Utility.cs  VisualComponents.cs  compile-cs-vs.bat  computeLoses.js  computeScore.js  createGame.js  csharp-cgdk.csproj
CodeRacing/: ABonus.cs  ACar.cs  AMove.cs  AOilSlick.cs  AProjectile.cs  ATile.cs  AUnit.cs  AlternativeStrategy.cs  BrutePatterns.cs  Collections.cs  Constants.cs  Debug.cs  DurabilityObserver.cs  FindPath.cs  Geometry.cs  IStrategy.cs  MapForm.Designer.cs  MapForm.cs  MyStrategy.cs  OilProjectileStrategy.cs  PathBruteForce.cs  PathBruteForcer.cs  Point.cs  RemoteProcessClient.cs  Runner.cs  Utility.cs  compile-cs-mono.bat  compile-cs-mono.sh  createGame.js  csharp-cgdk.csproj  csharp-cgdk.sln
CodeSide/: .gitignore  CMakeLists.txt  Debug.hpp  MyStrategy.cpp  MyStrategy.hpp  main.cpp  submit.sh  test.py
CodeSide/local-runner/: aicup2019-preferences.json  config.json  empty-config.json  kb-config.json
CodeSide/local-runner/levels/: empty.txt  pad.txt
CodeSide/model/: MineState.hpp
CodeSide/src/: Strategy.h  constants.h  draw.h  findpath.h  logger.h  sandbox.h  testing.h
CodeSide/src/model/: action.h  bullet.h  level.h  lootbox.h  mine.h  point.h  rectangle.h  unit.h  weapon.h
CodeTanks/: MyStrategy.cs  MyStrategyP.cs  link.txt
CodeTroopers/: IStrategy.cs  IfBonus.cs  MyStrategy.cs  Point.cs  Runner.cs  ScoutingStrategy.cs  Variables.cs  compile-csharp.bat  concatenate.bat  csharp-cgdk.sln
CodeWars/: ACircularUnit.cs  AFacility.cs  AMove.cs  ANuclear.cs  AUnit.cs  AVehicle.cs  Clustering.cs  Const.cs  DangerResult.cs  DangerStrategy.cs  FirstMovesStrategy.cs  FirstStrategy.cs  Geometry.cs  GroupsManager.cs  Hungarian.cs  IStrategy.cs  KDTree.cs  Logger.cs  MoveObserver.cs  MoveQueue.cs  MyGroup.cs  MyStrategy.cs  MyStrategyDanger.cs  MyStrategyFacilities.cs  MyStrategyFirstMoves.cs  MyStrategyInit.cs  MyStrategyMainLoop.cs  MyStrategyNuclears.cs  NuclearStrategy.cs  QuadTree.cs  RemoteProcessClient.cs  Runner.cs  Sandbox.cs  Utility.cs  VehiclesObserver.cs  compile-cs-mono.bat  compile-cs-mono.sh  compile-cs-roslyn.bat  csharp-cgdk.csproj  csharp-cgdk.sln
CodeWizards/: .gitignore  ABonus.cs  ABuilding.cs  ACircularUnit.cs  ACombatUnit.cs  AMessage.cs  AMinion.cs  AProjectile.cs  ATree.cs  AUnit.cs  AWizard.cs  BonusesObserver.cs  Const.cs  (+27 more)
(+1511 files in other folders)
